--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,13 +1,24 @@
 body {
     padding: 10px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    background-color: #424242;
+    color: white;
 }
 
 a {
     color: #00B7FF;
 }
 
-#cardControll button {
+hr {
+    background-color: white;
+    margin-bottom: 5%;
+}
+
+.btn-primary {
+    background-color: #9c27b0;
+}
+
+#searchButton {
     margin-top: 4%;
 }
 
